--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <p>Where every cup tells a story — coffee, cuisine & comfort in Kigali.</p>
     <div class="hero-ctas">
       <a href="#menu" class="btn">View Menu</a>
-      <a href="assets/menu.pdf" class="btn btn-ghost" target="_blank" rel="noopener">Download Full Menu (PDF)</a>
+      <a href="MENU.PDF" class="btn btn-ghost" target="_blank" rel="noopener">View Full Menu (PDF)</a>
       <a class="btn btn-wa" href="https://wa.me/250788967143?text=Hello%20Isame!%20I%27d%20like%20to%20reserve%20a%20table." target="_blank" rel="noopener">
         <svg class="icon"><use href="#icon-wa"/></svg> Reserve via WhatsApp
       </a>
@@ -130,7 +130,7 @@
 
     <div class="center stack-cta">
       <a class="btn" href="#reservations">Reserve a Table</a>
-      <a class="btn btn-ghost" href="CS8251-PROGRAMMING-IN-C-Question-Bank.pdf" target="_blank" rel="noopener">View Full Menu</a>
+      <a class="btn btn-ghost" href="MENU.PDF" target="_blank" rel="noopener">View Full Menu</a>
     </div>
   </div>
 </section>
@@ -269,7 +269,7 @@
           <a class="btn btn-wa" href="https://wa.me/250788967143?text=Hello%20Isame!" target="_blank" rel="noopener">
             <svg class="icon"><use href="#icon-wa"/></svg> Chat on WhatsApp
           </a>
-          <a class="btn btn-ghost" href="assets/menu.pdf" target="_blank" rel="noopener">Download Menu (PDF)</a>
+          <a class="btn btn-ghost" href="MENU.PDF" target="_blank" rel="noopener">View Full Menu (PDF)</a>
         </div>
       </div>
       <div class="col">
@@ -372,3 +372,4 @@
 
 </body>
 </html>
+
