--- a/index.html
+++ b/index.html
@@ -127,7 +127,13 @@
         </div>
       </article>
     </div>
-
+    
+<div class="center stack-cta">
+  <a class="btn" href="https://isamerestaurantkigali.netlify.app/MENU.PDF" target="_blank" rel="noopener">
+    View Full Menu (QR/PDF)
+  </a>
+</div>
+<!-- QR CODE -->
     <div class="center stack-cta">
       <a class="btn" href="#reservations">Reserve a Table</a>
       <a class="btn btn-ghost" href="CS8251-PROGRAMMING-IN-C-Question-Bank.pdf" target="_blank" rel="noopener">View Full Menu</a>
@@ -372,3 +378,4 @@
 
 </body>
 </html>
+
