--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <p>Where every cup tells a story — coffee, cuisine & comfort in Kigali.</p>
     <div class="hero-ctas">
       <a href="#menu" class="btn">View Menu</a>
-      <a href="assets/menu.pdf" class="btn btn-ghost" target="_blank" rel="noopener">Download Full Menu (PDF)</a>
+      <a href="MENU.PDF" class="btn btn-ghost" target="_blank" rel="noopener">View Full Menu (PDF)</a>
       <a class="btn btn-wa" href="https://wa.me/250788967143?text=Hello%20Isame!%20I%27d%20like%20to%20reserve%20a%20table." target="_blank" rel="noopener">
         <svg class="icon"><use href="#icon-wa"/></svg> Reserve via WhatsApp
       </a>
@@ -128,16 +128,19 @@
       </article>
     </div>
     
-<div class="center stack-cta">
-  <a class="btn" href="https://isamerestaurantkigali.netlify.app/MENU.PDF" target="_blank" rel="noopener">
-    View Full Menu (QR/PDF)
-  </a>
-</div>
-<!-- QR CODE -->
     <div class="center stack-cta">
       <a class="btn" href="#reservations">Reserve a Table</a>
-      <a class="btn btn-ghost" href="CS8251-PROGRAMMING-IN-C-Question-Bank.pdf" target="_blank" rel="noopener">View Full Menu</a>
+      <a class="btn btn-ghost" href="MENU.PDF" target="_blank" rel="noopener">View Full Menu</a>
     </div>
+  </div>
+</section>
+<!-- QR Code Menu Section -->
+<section class="qr-section">
+  <div class="qr-card">
+    <h3>📱 Scan to View Our Menu</h3>
+    <img src="https://chart.googleapis.com/chart?cht=qr&chs=250x250&chl=https://isamerestaurantkigali.netlify.app/MENU.PDF" 
+         alt="QR Code - View Menu" />
+    <p>Simply scan this QR code to open our full menu instantly on your phone.</p>
   </div>
 </section>
 
@@ -275,7 +278,7 @@
           <a class="btn btn-wa" href="https://wa.me/250788967143?text=Hello%20Isame!" target="_blank" rel="noopener">
             <svg class="icon"><use href="#icon-wa"/></svg> Chat on WhatsApp
           </a>
-          <a class="btn btn-ghost" href="assets/menu.pdf" target="_blank" rel="noopener">Download Menu (PDF)</a>
+          <a class="btn btn-ghost" href="MENU.PDF" target="_blank" rel="noopener">View Full Menu (PDF)</a>
         </div>
       </div>
       <div class="col">
@@ -379,5 +382,6 @@
 
 </body>
 </html>
+
 
 
