--- a/index.html
+++ b/index.html
@@ -134,15 +134,14 @@
     </div>
   </div>
 </section>
-<!-- QR Code Menu Section -->
-<section class="qr-section">
-  <div class="qr-card">
-    <h3>📱 Scan to View Our Menu</h3>
-    <img src="https://chart.googleapis.com/chart?cht=qr&chs=250x250&chl=https://isamerestaurantkigali.netlify.app/MENU.PDF" 
-         alt="QR Code - View Menu" />
-    <p>Simply scan this QR code to open our full menu instantly on your phone.</p>
-  </div>
-</section>
+  <!-- QR CODE VIEW -->
+<div style="text-align:center; margin:2rem 0;">
+  <h3>📱 Scan to View Our Menu</h3>
+  <p>Simply scan this QR code to open our full menu instantly on your phone</p>
+  <img src="https://chart.googleapis.com/chart?cht=qr&chs=200x200&chl=https://isamerestaurantkigali.netlify.app/MENU.PDF" 
+   alt="QR Code - View Menu" />
+</div>
+
 
 <!-- GALLERY (with Lightbox) -->
 <section id="gallery" class="section section-alt">
@@ -382,6 +381,7 @@
 
 </body>
 </html>
+
 
 
 
