--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
     </div>
   </div>
 </section>
-  <!-- QR CODE VIEW -->
-<div style="text-align:center; margin:2rem 0;">
-  <h3>📱 Scan to View Our Menu</h3>
-  <p>Simply scan this QR code to open our full menu instantly on your phone</p>
-https://chart.googleapis.com/chart?cht=qr&chs=300x300&chl=https://isamerestaurantkigali.netlify.app/MENU.PDF
-     alt="QR Code - View Menu" />
-</div>
+<!-- Simple QR image using Google Chart API -->
+<img
+  src="https://chart.googleapis.com/chart?cht=qr&chs=300x300&chl=https%3A%2F%2Fisamerestaurantkigali.netlify.app%2FMENU.PDF&chld=L|1"
+  alt="ISAME Restaurant Menu QR"
+  width="300"
+  height="300"
+/>
 
 
 <!-- GALLERY (with Lightbox) -->
@@ -381,6 +381,7 @@ https://chart.googleapis.com/chart?cht=qr&chs=300x300&chl=https://isamerestauran
 
 </body>
 </html>
+
 
 
 
