AGAIN QR CODE HERE

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 </section>
 <!-- Simple QR image using Google Chart API -->
 <img
-  src="https://chart.googleapis.com/chart?cht=qr&chs=300x300&chl=https%3A%2F%2Fisamerestaurantkigali.netlify.app%2FMENU.PDF&chld=L|1"
+  src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=https://isamerestaurantkigali.netlify.app/MENU.PDF"
   alt="ISAME Restaurant Menu QR"
   width="300"
   height="300"
@@ -381,6 +381,7 @@
 
 </body>
 </html>
+
 
 
 
