--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Isame Restaurant & Coffee Shop</title>
   <link rel="stylesheet" href="style.css" />
   <meta name="description" content="Isame Restaurant & Coffee Shop – Kigali. Where taste meets art and coffee meets culture." />
@@ -357,6 +358,10 @@
     current = (current + 1) % slides.length;
     slides[current].classList.add('active');
   }, 6000);
+  <div class="hamburger" onclick="document.querySelector('nav').classList.toggle('active')">
+  ☰
+</div>
+
 
   // Gallery lightbox
   const lb = document.getElementById('lightbox');
@@ -381,6 +386,7 @@
 
 </body>
 </html>
+
 
 
 
