--- a/index.html
+++ b/index.html
@@ -399,14 +399,14 @@
     <p>Where every cup tells a story — coffee, cuisine & comfort in Kigali.</p>
     <div class="hero-ctas">
       <a href="#menu" class="btn">View Menu</a>
-      <a href="#" class="btn btn-ghost">View Full Menu (PDF)</a>
-      <a class="btn btn-wa" href="https://wa.me/250788967143?text=Hello%20Isame!%20I%27d%20like%20to%20reserve%20a%20table." target="_blank" rel="noopener">
-        <svg class="icon"><use href="#icon-wa"/></svg> Reserve via WhatsApp
+      <a href="MENU.PDF" class="btn btn-ghost">View Full Menu (PDF)</a>
+      <a class="btn btn-wa" href="https://wa.me/250787511314?text=Hello%20Isame!%20I%27d%20like%20to%20reserve%20a%20table." target="_blank" rel="noopener">
+        <svg class="icon"><use href="#icon-wa"/></svg> Reservation
       </a>
     </div>
     <div class="hours">
       <strong>Hours:</strong>
-      Breakfast 06:00–1:30 • Lunch 11:00–15:00 • Dinner 18:00–24:00
+      Breakfast 06:00–10:30 • Lunch 11:00–15:00 • Dinner 18:00–24:00
     </div>
   </div>
 </header>
@@ -421,6 +421,7 @@
     </div>
     <div class="col">
       <figure class="about-figure">
+         <img src="https://images.unsplash.com/photo-1504754524776-8f4f37790ca0?q=80&w=1200&auto=format&fit=crop" alt="Isame dishes and coffee" />
         <img src="https://images.unsplash.com/photo-1504754524776-8f4f37790ca0?q=80&w=1200&auto=format&fit=crop" alt="Isame dishes and coffee" />
       </figure>
     </div>
@@ -439,7 +440,7 @@
           <h3>Espresso</h3>
           <p>Rich, bold shot pulled to perfection.</p>
           <div class="card-actions">
-            <a class="btn btn-wa" href="https://wa.me/250788967143?text=Order:%20Espresso%20x1" target="_blank" rel="noopener">
+            <a class="btn btn-wa" href="https://wa.me/250787511314?text=Order:%20Espresso%20x1" target="_blank" rel="noopener">
               <svg class="icon"><use href="#icon-wa"/></svg> Order on WhatsApp
             </a>
           </div>
@@ -451,7 +452,7 @@
           <h3>Cappuccino</h3>
           <p>Creamy foam with deep coffee richness.</p>
           <div class="card-actions">
-            <a class="btn btn-wa" href="https://wa.me/250788967143?text=Order:%20Cappuccino%20x1" target="_blank" rel="noopener">
+            <a class="btn btn-wa" href="https://wa.me/250787511314?text=Order:%20Cappuccino%20x1" target="_blank" rel="noopener">
               <svg class="icon"><use href="#icon-wa"/></svg> Order on WhatsApp
             </a>
           </div>
@@ -463,7 +464,7 @@
           <h3>Signature Burger</h3>
           <p>Juicy, flavorful and unforgettable.</p>
           <div class="card-actions">
-            <a class="btn btn-wa" href="https://wa.me/250788967143?text=Order:%20Signature%20Burger%20x1" target="_blank" rel="noopener">
+            <a class="btn btn-wa" href="https://wa.me/250787511314?text=Order:%20Signature%20Burger%20x1" target="_blank" rel="noopener">
               <svg class="icon"><use href="#icon-wa"/></svg> Order on WhatsApp
             </a>
           </div>
@@ -475,7 +476,7 @@
           <h3>Vegan Salad</h3>
           <p>Fresh greens, avocado and classic dressing.</p>
           <div class="card-actions">
-            <a class="btn btn-wa" href="https://wa.me/250788967143?text=Order:%20Vegan%20Salad%20x1" target="_blank" rel="noopener">
+            <a class="btn btn-wa" href="https://wa.me/250787511314?text=Order:%20Vegan%20Salad%20x1" target="_blank" rel="noopener">
               <svg class="icon"><use href="#icon-wa"/></svg> Order on WhatsApp
             </a>
           </div>
@@ -588,7 +589,7 @@
     <h2>Reservations / Orders</h2>
     <p class="section-lead">Reserve food or drinks in advance. Please specify your order from the current menu. <strong>Rule:</strong> Pre-orders require paying half of the total.</p>
     <div class="center">
-      <a class="btn btn-wa" href="https://wa.me/250788967143?text=Reservation:%20Name%2C%20Date%2FTime%2C%20Number%20of%20People%2C%20Order%20Details" target="_blank" rel="noopener">
+      <a class="btn btn-wa" href="https://wa.me/250787511314?text=Reservation:%20Name%2C%20Date%2FTime%2C%20Number%20of%20People%2C%20Order%20Details" target="_blank" rel="noopener">
         <svg class="icon"><use href="#icon-wa"/></svg> Start Reservation on WhatsApp
       </a>
     </div>
@@ -629,9 +630,9 @@
     <div class="two-col contact-grid">
       <div class="col">
         <p><strong>Location:</strong> Kigali, Rwanda</p>
-        <p><strong>Phone/WhatsApp:</strong> <a href="https://wa.me/250788967143" target="_blank" rel="noopener">+250 788 967 143</a></p>
+        <p><strong>Phone/WhatsApp:</strong> <a href="https://wa.me/250787511314" target="_blank" rel="noopener">+250787 511 314</a></p>
         <div class="stack-cta">
-          <a class="btn btn-wa" href="https://wa.me/250788967143?text=Hello%20Isame!" target="_blank" rel="noopener">
+          <a class="btn btn-wa" href="https://wa.me/250787511314?text=Hello%20Isame!" target="_blank" rel="noopener">
             <svg class="icon"><use href="#icon-wa"/></svg> Chat on WhatsApp
           </a>
           <a class="btn btn-ghost" href="#" target="_blank" rel="noopener">View Full Menu (PDF)</a>
@@ -690,7 +691,7 @@
   </div>
 </footer>
 
-<a href="https://wa.me/250788967143" class="whatsapp-float" target="_blank">
+<a href="https://wa.me/250787511314" class="whatsapp-float" target="_blank">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="32" height="32" fill="#25D366">
     <path d="M16.003 3.2C9.607 3.2 4.4 8.407 4.4 14.803c0 2.61.748 5.027 2.037 7.08L3 29l7.18-3.428a11.64 11.64 0 0 0 5.823 1.497h.003c6.395 0 11.603-5.208 11.603-11.604S22.398 3.2 16.003 3.2zm0 21.4c-1.886 0-3.733-.508-5.333-1.468l-.383-.228-4.27 2.037 1.05-4.418-.249-.383a10.26 10.26 0 0 1-1.554-5.680c0-5.654 4.594-10.25 10.25-10.25s10.25 4.596 10.25 10.25-4.594 10.25-10.25 10.25zm5.588-7.676c-.307-.154-1.818-.899-2.1-.999-.281-.1-.487-.154-.693.154-.204.307-.793.999-.973 1.203-.179.204-.358.23-.666.077-.307-.154-1.296-.479-2.47-1.525-.913-.813-1.528-1.814-1.707-2.12-.179-.307-.019-.473.135-.627.139-.138.307-.358.461-.537.154-.179.204-.307.307-.512.102-.204.051-.384-.026-.537-.077-.154-.693-1.667-.949-2.281-.25-.597-.507-.517-.693-.527l-.593-.01c-.204 0-.537.077-.82.384s-1.077 1.052-1.077 2.562c0 1.51 1.103 2.97 1.257 3.175.154.204 2.17 3.312 5.26 4.646.736.317 1.308.507 1.752.647.736.23 1.407.198 1.936.120.591-.085 1.818-.744 2.077-1.462.256-.717.256-1.332.179-1.462-.077-.128-.28-.204-.587-.358z"/>
   </svg>
@@ -746,3 +747,4 @@
 
 </body>
 </html>
+
