--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
     <div class="col">
       <figure class="about-figure">
          <img src="https://images.unsplash.com/photo-1504754524776-8f4f37790ca0?q=80&w=1200&auto=format&fit=crop" alt="Isame dishes and coffee" />
-        <img src="https://images.unsplash.com/photo-1504754524776-8f4f37790ca0?q=80&w=1200&auto=format&fit=crop" alt="Isame dishes and coffee" />
+        <img src="jpg ok web.webp" alt="Nyamirambo" />
       </figure>
     </div>
   </div>
@@ -747,4 +747,5 @@
 
 </body>
 </html>
+
 
